updating record stream example to pipe audio to speakers

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "fluent-ffmpeg-multistream": "^1.0.0",
     "node-fetch": "^2.3.0",
+    "speaker": "^0.5.2",
     "uuid": "^3.3.2",
     "wrtc": "^0.4.3"
   },
