--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "author": "Mark Andrus Roberts <markandrusroberts@gmail.com>",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "@serialport/parser-readline": "^9.0.7",
     "body-parser": "^1.18.3",
     "browserify-middleware": "^8.1.1",
     "color-space": "^1.16.0",
     "express": "^4.16.4",
     "node-fetch": "^2.3.0",
+    "serialport": "^9.0.7",
     "speaker": "^0.5.2",
     "uuid": "^3.3.2",
     "wrtc": "^0.4.3"
