--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browserify-middleware": "^8.1.1",
     "color-space": "^1.16.0",
     "express": "^4.16.4",
+    "lirc-client": "^2.0.0",
     "node-fetch": "^2.3.0",
     "serialport": "^9.0.7",
     "speaker": "^0.5.2",
